init: husky pre-commit 설정

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:coverage:window": "open coverage/lcov-report/index.html"
+    "test:coverage:window": "open coverage/lcov-report/index.html",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.3.1",
@@ -32,14 +33,26 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "msw": "^2.7.5",
     "postcss": "^8.4.38",
+    "prettier": "^3.5.3",
     "tailwindcss": "3.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "whatwg-fetch": "^3.6.20"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,scss,md,json}": [
+      "prettier --write"
+    ]
   }
 }
