--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.4",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
