--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@swc/core": "^1.11.21",
     "@swc/jest": "^0.2.37",
     "@tanstack/react-query-devtools": "^5.74.4",
     "@testing-library/dom": "^10.4.0",
