--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "prettier": "prettier --check '**/*.{ts,tsx,js,jsx,json}'",
+    "prettier:fix": "prettier --write '**/*.{ts,tsx,js,jsx,json}'",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
